Fix docker configuration building incomplete JRE